# django-app-help

./: .autoenv.leave  .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  context7.json  initial_spec.md  pyproject.toml
app_help/: __init__.py  apps.py  cli.py  conf.py  discovery.py  engine.py  exceptions.py  models.py  parsing.py  scaffold.py  views.py
demo/: pyproject.toml
demo/demo/: settings.py  urls.py
demo/demo/core/: apps.py  tests.py  views.py
demo/demo/core/help/books/: admin.yaml  developer.yaml  user.yaml
demo/demo/core/help/pages/admin/: audience.md  permissions.md  validation.md
demo/demo/core/help/pages/authoring/: includes.md  pages.md  snippets.md
demo/demo/core/help/pages/getting-started/: navigation.md  welcome.md
demo/demo/core/help/pages/integration/: engine.md
demo/demo/core/help/pages/linking/: assets.md  help-links.md
demo/demo/core/help/pages/topics/: books.md  pages.md
demo/demo/core/help/snippets/: demo-tip.md  support-contact.md  validation-reminder.md
demo/demo/core/help/snippets/common/: author-note.md
demo/demo/core/templates/core/: standard.html
etc/: napoleon_gate_baseline.json
tests/: test_cli.py  test_engine.py  test_views.py
tests/fixtures/help/books/: admin.yaml  broken.yaml  invalid.yaml  user.yaml
tests/fixtures/help/pages/billing/: absolute-include.md  bad-asset.md  bad-link.md  circular-include.md  deep-include.md  invalid-front-matter.md  missing-include.md  nested.md  oracle-upload.md  overview.md  pta-accounts.md  traversal-include.md
tests/fixtures/help/snippets/: circular-a.md  circular-b.md  depth-1.md  depth-2.md  depth-3.md  depth-4.md  depth-5.md  depth-6.md  pta-warning.md  support-contact.md
tests/fixtures/help/snippets/common/: admin-note.md
